# getsitedna

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
analysis/: COMPONENT_LIBRARY.md  DESIGN_SYSTEM.md  IMPLEMENTATION_GUIDE.md  README.md  TECHNICAL_SPECIFICATION.md  analysis_summary.json  pages_data.json  site_data.json  specification.json  validation_report.json
docs/: API_REFERENCE.md  prd.md
examples/: api_examples.py  basic_usage.py  cli_examples.md
src/getsitedna/: __init__.py
src/getsitedna/cli/: interactive.py  main.py
src/getsitedna/cli/commands/: performance.py  validate.py
src/getsitedna/core/: analyzer.py
src/getsitedna/crawlers/: dynamic_crawler.py  static_crawler.py
src/getsitedna/extractors/: api_discovery.py  assets.py  content.py  design.py  structure.py
src/getsitedna/models/: page.py  schemas.py  site.py
src/getsitedna/outputs/: json_writer.py  markdown_writer.py
src/getsitedna/processors/: html_parser.py  pattern_recognition.py
src/getsitedna/utils/: cache.py  config.py  error_handling.py  http.py  intent_detection.py  performance.py  validation.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_integration.py  test_crawlers.py  test_error_handling.py  test_extractors.py  test_import_validation.py  test_models.py  test_outputs.py
